# mesos-microhttpd-framework

./: README.md  libCMakeLists.txt  mainCMakeLists.txt  mesos-microhttpd-framework.sln
include/: MHD_config.h  fileserver_example.h  platform.h
include/mesos-microhttpd-framework/: FrameworkDriver.hpp  test_microhttpd.hpp
mesos-microhttpd-framework/: CMakeLists.txt  FrameworkDriverManager.cpp  FrameworkDriverManager.hpp  libCMakeLists.txt  main.cpp  mainCMakeLists.txt  mesos-microhttpd-framework.vcxproj  mesos-microhttpd-framework.vcxproj.filters  test_framework.cpp  test_framework.hpp
src/: CMakeLists.txt  FrameworkDriver.cpp  libCMakeLists.txt  main.cpp  mainCMakeLists.txt  test_framework.cpp  test_microhttpd.cpp
